--- a/css/main.css
+++ b/css/main.css
@@ -34,10 +34,45 @@
 
 .carousel-content2 {
   position: absolute;
-  bottom: 20%;
+  bottom: 40%;
+  left: 30%;
+  z-index: 20;
+  color: white;
+  font-family: "Arial", Times, sans-serif;
+
+
+}
+.carousel-content3 {
+  position: absolute;
+  bottom: 15%;
+  left: 20%;
+  z-index: 20;
+  color: white;
+  font-family: "Arial", Times, sans-serif;
+
+
+}
+
+}
+.carousel-content4 {
+  position: absolute;
+  bottom: 80%;
+  left: 80%;
+  z-index: 20;
+  color: white;
+  font-family: "Arial", Times, sans-serif;
+
+
+}
+
+
+.carousel-brain {
+  position: absolute;
+  bottom: 40%;
   left: 30%;
   z-index: 20;
   color: white;
   font-family: "Arial", Times, sans-serif;
 
 }
+
