--- a/css/resume.css
+++ b/css/resume.css
@@ -1,7 +1,6 @@
 /* BODY */
 
-/*This ensures the web page will reach full height and width of the page.
-Also you can throw in your font-family here rather than repeating.*/
+/*This ensures the web page will reach full height and width of the page. Also you can throw in your font-family here rather than repeating.*/
 
 html, body {
   height: 100%;
@@ -9,6 +8,9 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: "Arial", sans-serif;
+  color: black;
+
+}
 
 }
 
@@ -33,8 +35,8 @@ html, body {
   bottom: 40%;
   left: 40%;
   z-index: 1;
-  color: #3a4f70;
-  font-size: 600pt;
+  color: black;
+  font-size: 280pt;
   font-family: "Arial", sans-serif;
 }
 
