--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,4 @@
-/*
-fonts
- */
+/* FONTS AND STYLES */
 
 html {
     scroll-behavior: smooth;
@@ -42,7 +40,7 @@ p.footer {
 .text-muted {
     font-size:2vw;
 }
-/* navbar */
+/* NAVIGATION BAR */
 
 nav {
     border-bottom: 3px solid #000000;
@@ -109,7 +107,7 @@ a.nav-link:hover {
 }
 
 
-/* content */
+/* CONTENT */
 
 .img-fluid {
     max-width: 100%;
@@ -128,7 +126,10 @@ a.nav-link:hover {
     width: auto;
 }
 
-/* containers */
+/* CONTAINERS */
+
+
+/* all screens */
 
 .container-name {
     margin: 10%;
@@ -139,6 +140,7 @@ a.nav-link:hover {
     padding: 5%;
 }
 
+
 .pointer-row {
     margin-left:10%;
     margin-right: 10%;
@@ -147,6 +149,7 @@ a.nav-link:hover {
     padding: 0%;
 
 }
+
 
 .container-info {
     margin: 10%;
@@ -183,7 +186,7 @@ a.nav-link:hover {
 
 .container-about {
     margin: 10%;
-    margin-top:10%;
+    margin-top:11%;
     margin-bottom: 3%;
     background-color: #e5e8f9;
     height: 65vh;
@@ -192,6 +195,7 @@ a.nav-link:hover {
     padding-top: 3%;
 
 }
+
 
 .page-container {
     overflow:hidden;
@@ -209,6 +213,34 @@ a.nav-link:hover {
     margin: 10%;
     margin-bottom: 0%;
     margin-top: 7%
+
+}
+
+/* mobile */
+
+@media screen and (max-width: 768px) {
+    .container-about {
+    margin: 10%;
+    margin-top:20%;
+    margin-bottom: 3%;
+    background-color: #e5e8f9;
+    height: 65vh;
+    padding: 10%;
+    padding-left:8%;
+    padding-top: 3%;
+
+}
+}
+
+@media screen and (max-width: 768px) {
+.container-name {
+    margin: 10%;
+    margin-top:20%;
+    margin-bottom: 5%;
+    background-color: #f9d3c5;
+    height: 40vh;
+    padding: 5%;
+}
 
 }
 
