--- a/css/main.css
+++ b/css/main.css
@@ -244,6 +244,30 @@ a.nav-link:hover {
 
 }
 
+@media only screen and (max-width: 768px) {
+  p {
+    font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  h1 {
+    font-size: 32px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  h2 {
+    font-size: 28px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .text-muted {
+    font-size: 15px;
+  }
+}
+
 
 
 
