--- a/css/main.css
+++ b/css/main.css
@@ -7,13 +7,13 @@ html {
 .h1, h1 {
     font-family: "Times New Roman"! important;
     font-weight: bold;
-    font-size: 6vw;
+    font-size: 50px;
 
 }
 
 .h2, h2 {
     font-family: "Helvetica Neue"! important;
-    font-size: 3.5vw;
+    font-size: 40px;
     font-weight: bold;
     color: #575757 ! important;
 
@@ -21,14 +21,14 @@ html {
 
 p {
     font-family: "Futura"! important;
-    font-size: 2.7vw;
+    font-size: 25px;
     color: black;
 
 }
 
 p.about {
     font-family: "Futura"! important;
-    font-size: 2vw;
+    font-size: 25px;
     color: black;
 
 }
@@ -38,7 +38,7 @@ p.footer {
 }
 
 .text-muted {
-    font-size:2vw;
+    font-size:20px;
 }
 /* NAVIGATION BAR */
 
@@ -144,7 +144,7 @@ a.nav-link:hover {
 .pointer-row {
     margin-left:10%;
     margin-right: 10%;
-    margin-bottom: 0%
+    margin-bottom: 0%;
     justify-content: center;
     padding: 0%;
 
@@ -162,7 +162,7 @@ a.nav-link:hover {
     padding-top: 3%;
 }
 
-.container-info2 {
+.container-exp {
     margin: 10%;
     margin-top:7%;
     margin-bottom: 3%;
@@ -173,7 +173,28 @@ a.nav-link:hover {
     padding-top: 3%;
 }
 
-.container-info3 {
+.container-projects {
+    margin: 10%;
+    margin-top:7%;
+    margin-bottom: 3%;
+    background-color: #d0eeff;
+    height: 80vh;
+    padding: 10%;
+    padding-left:8%;
+    padding-top: 6%;
+}
+
+.container-languages {
+    margin: 10%;
+    margin-top:7%;
+    margin-bottom: 3%;
+    background-color: #f9ceed;
+    height: 70vh;
+    padding: 10%;
+    padding-left:8%;
+    padding-top: 3%;
+}
+.container-research {
     margin: 10%;
     margin-top:7%;
     margin-bottom: 3%;
@@ -194,34 +215,13 @@ a.nav-link:hover {
     padding-top: 6%;
 }
 
-.container-info5 {
-    margin: 10%;
-    margin-top:7%;
-    margin-bottom: 3%;
-    background-color: #f9ceed;
-    height: 70vh;
-    padding: 10%;
-    padding-left:8%;
-    padding-top: 3%;
-}
-
-.container-info6 {
-    margin: 10%;
-    margin-top:7%;
-    margin-bottom: 3%;
-    background-color: #d0eeff;
-    height: 80vh;
-    padding: 10%;
-    padding-left:8%;
-    padding-top: 6%;
-}
 
 .container-about {
     margin: 10%;
     margin-top:11%;
     margin-bottom: 3%;
     background-color: #e5e8f9;
-    height: 65vh;
+    height: 55vh;
     padding: 10%;
     padding-left:8%;
     padding-top: 3%;
@@ -262,6 +262,12 @@ a.nav-link:hover {
     padding-top: 3%;
 
 }
+}
+
+@media screen and (max-width: 400px) {
+    img {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 768px) {
