--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ html {
 .h1, h1 {
     font-family: "Times New Roman"! important;
     font-weight: bold;
-    font-size: 50px;
+    font-size: 85px;
 
 }
 
@@ -15,7 +15,7 @@ html {
     font-family: "Helvetica Neue"! important;
     font-size: 40px;
     font-weight: bold;
-    color: #575757 ! important;
+    color: #6b6b6b ! important;
 
 }
 
@@ -28,7 +28,7 @@ p {
 
 p.about {
     font-family: "Futura"! important;
-    font-size: 25px;
+    font-size: 20px;
     color: black;
 
 }
@@ -133,7 +133,7 @@ a.nav-link:hover {
 
 .container-name {
     margin: 10%;
-    margin-top:11%;
+    margin-top:13%;
     margin-bottom: 5%;
     background-color: #f9d3c5;
     height: 40vh;
@@ -256,7 +256,7 @@ a.nav-link:hover {
     margin-top:20%;
     margin-bottom: 3%;
     background-color: #e5e8f9;
-    height: 65vh;
+    height: 80vh;
     padding: 10%;
     padding-left:8%;
     padding-top: 3%;
